# public/swagger.json
@@ -83,12 +83,123 @@
 					},
 					"v": {
 						"type": "boolean"
+					},
+					"return": {
+						"type": "number",
+						"format": "double"
 					}
 				},
 				"required": [
 					"type",
 					"no",
-					"v"
+					"v",
+					"return"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"DsGetWorkPieceExt": {
+				"properties": {
+					"Ost": {
+						"items": {
+							"type": "number",
+							"format": "double"
+						},
+						"type": "array"
+					},
+					"axisFlag": {
+						"type": "number",
+						"format": "double"
+					},
+					"return": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"Ost",
+					"axisFlag",
+					"return"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"DsGetWorkPieceG92": {
+				"properties": {
+					"Ost": {
+						"items": {
+							"type": "number",
+							"format": "double"
+						},
+						"type": "array"
+					},
+					"axis": {
+						"type": "number",
+						"format": "double"
+					},
+					"return": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"Ost",
+					"axis",
+					"return"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"DsSetCoordOffset": {
+				"properties": {
+					"gn": {
+						"type": "number",
+						"format": "double"
+					},
+					"oset": {
+						"type": "number",
+						"format": "double"
+					},
+					"axisFlag": {
+						"type": "number",
+						"format": "double"
+					},
+					"return": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"gn",
+					"oset",
+					"axisFlag",
+					"return"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"DsSetWorkPieceExt": {
+				"properties": {
+					"Ost": {
+						"items": {
+							"type": "number",
+							"format": "double"
+						},
+						"type": "array"
+					},
+					"axisFlag": {
+						"type": "number",
+						"format": "double"
+					},
+					"return": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"Ost",
+					"axisFlag",
+					"return"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -284,6 +395,190 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/GetNCPLC"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/DsGetWorkPieceExt": {
+			"get": {
+				"operationId": "Get",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/DsGetWorkPieceExt"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			},
+			"put": {
+				"operationId": "Set",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "boolean"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/DsGetWorkPieceExt"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/DsGetWorkPieceG92": {
+			"get": {
+				"operationId": "Get",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/DsGetWorkPieceG92"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			},
+			"put": {
+				"operationId": "Set",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "boolean"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/DsGetWorkPieceG92"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/DsSetCoordOffset": {
+			"get": {
+				"operationId": "Get",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/DsSetCoordOffset"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			},
+			"put": {
+				"operationId": "Set",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "boolean"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/DsSetCoordOffset"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/DsSetWorkPieceExt": {
+			"get": {
+				"operationId": "Get",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/DsSetWorkPieceExt"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			},
+			"put": {
+				"operationId": "Set",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "boolean"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/DsSetWorkPieceExt"
 							}
 						}
 					}
